engine/codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__promoted_action_banner_40.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: rendered
---
                                        
  Usage limit reached                   
  Review your usage or keep working     
  with another model.                   
                                        
                                        
› 1. View usage                         
                                        
  f3 select · f2 back
